Z index CSS on the ribbon Free Guide Ad

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -55,6 +55,15 @@ a
 .orangeText
   color: $orange  
 
+.shadow
+  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75)
+
+.center
+  text-align: center
+
+.left
+  text-align: left    
+
 .dropdown-item:hover
   color: $white !important
   background-color: $orangeDark !important  
@@ -87,6 +96,19 @@ img-mobile
 
 .spacing
   margin-top: 20px 
+
+.bold
+  font-weight: bold
+
+.marginTweak
+  margin-bottom: 20px
+  margin-top: 20px  
+  text-align: center
+
+#ribbonAd
+  position: relative
+  right: -50px
+  z-index: 99  
 
 #mainContent
   background-color: $white  
