--- a/pages/index.pug
+++ b/pages/index.pug
@@ -119,50 +119,99 @@ block content
   div(class='container' id='mainContent')
     // Separate out the page into 8/4 columns for Bootstrap
     div(class='row')
+      // Left Side of the Page
       div(class='col-md-8 col-lg-8')
-
         // Featured Locations
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
           a(href='http://www.tnland.com/land/homesite-for-sale-next-to-a-waterfall/')
-            img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2013/08/jh148-water-fall.jpg')
+            img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2013/08/jh148-water-fall.jpg')
             b
               p(class='contentText') Beautiful Tennessee Mountain Homesite Next to a Waterfall
 
         // Jasper Highlands
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
           img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2015/04/JH-catskill.jpg')
           p A beautiful gated mountain community with spacious mountain homesites, river views, waterfalls, creeks, and trails - 
             b
               a(href='https://www.jasperhighlands.com/' class='contentText') Jasper Highlands
 
         // Sunsets
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
           i
             b
               a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/')
                 p(class='contentText') Tennessee Land For Sale With Incredible Sunset...
-          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br2-mtns-land-pasture-tn.jpg')    
+          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br2-mtns-land-pasture-tn.jpg')    
           p This incredible, and very private 40 acres features a variety of natural mountain features and would make a great …
             a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/') 
-            span(class='orangeText') [Read More...]
+              span(class='orangeText') [Read More...]
 
         // Over 180 Acres of TN Mtn Land With...
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
           i
             b
               a(href='http://www.tnland.com/land/large-tennessee-acreage-character/')
                 p(class='contentText') Over 180 Acres Of Tennessee Mountain Land With…
-          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br1-clouds-mtns.jpg')    
+          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br1-clouds-mtns.jpg')    
           p This large acreage Tennessee mountain property has it all. Incredible sunsets, deep forest, rolling pasture, and unique rock …
             a(href='http://www.tnland.com/land/large-tennessee-acreage-character/') 
-            span(class='orangeText') [Read More...]
+              span(class='orangeText') [Read More...]
 
-      div(class='col-md-4 col-lg-4')   
+        // The Perfect Land For A Hunting Lodge..
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+          i
+            b
+              a(href='http://www.tnland.com/land/large-acreage-hunting-land/')
+                p(class='contentText') The Perfect Land For A Hunting Lodge Or Cabin Retreat
+          img(class='img img-responsive shadow' src='http://cdn3.tnland.com/wp-content/uploads/2012/08/tract9-tn-mountain-views-356x200.jpg')    
+          p In terms of natural features, location and aesthetics, simply put, Tract 9 in The Ridges at Franklin Forest has it all. ...
+            a(href='http://www.tnland.com/land/large-acreage-hunting-land/') 
+              span(class='orangeText') [Read More...]   
+
+        // 313 Acre Hunting or Horse Property
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+          i
+            b
+              a(href='http://www.tnland.com/land/hunting-land-big-acreage/')
+                p(class='contentText') 313 Acre Hunting Or Horse Property
+          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2012/08/tract8-mountain-valley-view-356x200.jpg')    
+          p This 313 (+/-) acre section of Tennessee mountain property has it all. The southern and much of the western …
+            a(href='http://www.tnland.com/land/hunting-land-big-acreage/') 
+              span(class='orangeText') [Read More...]     
+
+        // 313 Acre Hunting or Horse Property
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+          i
+            b
+              a(href='http://www.tnland.com/land/hunting-land-big-acreage/')
+                p(class='contentText') 313 Acre Hunting Or Horse Property
+          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2012/08/tract8-mountain-valley-view-356x200.jpg')    
+          p This 313 (+/-) acre section of Tennessee mountain property has it all. The southern and much of the western …
+            a(href='http://www.tnland.com/land/hunting-land-big-acreage/') 
+              span(class='orangeText') [Read More...]                   
+
+        // THIS IS THE FINAL PART OF THE LEFT PAGE
+        // Discover Jasper Ad
+        div(class='col-lg-12 col-xl-12 col-md-12 col-sm-12 col-xs-12 marginTweak')
+          a(href='http://www.tnland.com/jasper/')
+            img(class='img img-responsive' src='http://cdn2.tnland.com/wp-content/uploads/2013/03/jasper-highlands-discover-splashb.jpg')      
+
+      // The Right Side of the Page!
+      div(class='col-md-4 col-lg-4 col-sm-12 col-xs-12 center')   
         // Free Guide
-        div(class='col-lg-12 col-xl-12 d-none d-xl-block')
+        div(class='col-lg-12 col-xl-12 d-none d-md-block' id='ribbonAd')
           img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
-   
 
+        // Low Taxes
+        div(class='col-lg-12 col-xl-12 marginTweak')
+          p
+            span(class='bold') TN Land 
+            span offers beautiful Tennessee land for sale with majestic views, creeks and waterfalls! Most of our land and acreage for sale are large mountain tracts and home sites located near Chattanooga and Sewanee Tennessee. These properties offer great country living without being too far away… Also&nbsp;
+            span(class='bold') Tennessee has no state income tax and low property taxes!
+
+        // Free Land Guide Ad
+        div(class='col-lg-12 col-xl-12 marginTweak')
+          img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2016/07/land-guide-ad.jpg')
 
 block footer
   div(id='footerMain')
