Sidebar content completed.

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -105,6 +105,16 @@ img-mobile
   margin-top: 20px  
   text-align: center
 
+.left-border
+  border-left: 1px solid $grey 
+
+.bottom-border
+  border-bottom: 1px solid $grey
+
+.alignleft
+  float: left
+  text-align: left
+
 #ribbonAd
   position: relative
   right: -50px
