--- a/pages/index.pug
+++ b/pages/index.pug
@@ -129,14 +129,14 @@ block content
               p(class='contentText') Beautiful Tennessee Mountain Homesite Next to a Waterfall
 
         // Jasper Highlands
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center left-border')
           img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2015/04/JH-catskill.jpg')
           p A beautiful gated mountain community with spacious mountain homesites, river views, waterfalls, creeks, and trails - 
             b
               a(href='https://www.jasperhighlands.com/' class='contentText') Jasper Highlands
 
         // Sunsets
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
           i
             b
               a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/')
@@ -147,7 +147,7 @@ block content
               span(class='orangeText') [Read More...]
 
         // Over 180 Acres of TN Mtn Land With...
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
           i
             b
               a(href='http://www.tnland.com/land/large-tennessee-acreage-character/')
@@ -158,7 +158,7 @@ block content
               span(class='orangeText') [Read More...]
 
         // The Perfect Land For A Hunting Lodge..
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
           i
             b
               a(href='http://www.tnland.com/land/large-acreage-hunting-land/')
@@ -169,7 +169,7 @@ block content
               span(class='orangeText') [Read More...]   
 
         // 313 Acre Hunting or Horse Property
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
           i
             b
               a(href='http://www.tnland.com/land/hunting-land-big-acreage/')
@@ -179,16 +179,27 @@ block content
             a(href='http://www.tnland.com/land/hunting-land-big-acreage/') 
               span(class='orangeText') [Read More...]     
 
-        // 313 Acre Hunting or Horse Property
-        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center')
+        // Tennessee Mountain Land With..
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
           i
             b
-              a(href='http://www.tnland.com/land/hunting-land-big-acreage/')
-                p(class='contentText') 313 Acre Hunting Or Horse Property
-          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2012/08/tract8-mountain-valley-view-356x200.jpg')    
-          p This 313 (+/-) acre section of Tennessee mountain property has it all. The southern and much of the western …
-            a(href='http://www.tnland.com/land/hunting-land-big-acreage/') 
-              span(class='orangeText') [Read More...]                   
+              a(href='http://www.tnland.com/land/tennessee-mountain-land-lots-privacy/')
+                p(class='contentText') Tennessee Mountain Land With Lots Of Privacy…
+          img(class='img img-responsive shadow' src='http://cdn3.tnland.com/wp-content/uploads/2016/07/rb127-mtn-view-356x200.jpg')    
+          p This Tennessee mountain land for sale is for those looking for privacy and plenty of space around the home site. One has …
+            a(href='http://www.tnland.com/land/tennessee-mountain-land-lots-privacy/') 
+              span(class='orangeText') [Read More...]  
+
+        // Homesite with Back Door Wooded..
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12 inline center bottom-border')
+          i
+            b
+              a(href='http://www.tnland.com/land/wooded-privacy-creek-and-meadows/')
+                p(class='contentText') Homesite With Back Door Wooded Privacy, Creek, And Meadows…
+          img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2014/02/jh102-creek-tennessee-property.jpg')    
+          p This Jasper Highlands homesite has a bit of a slope from the road back to a really nice meandering …
+            a(href='http://www.tnland.com/land/wooded-privacy-creek-and-meadows/') 
+              span(class='orangeText') [Read More...]                                  
 
         // THIS IS THE FINAL PART OF THE LEFT PAGE
         // Discover Jasper Ad
@@ -197,7 +208,7 @@ block content
             img(class='img img-responsive' src='http://cdn2.tnland.com/wp-content/uploads/2013/03/jasper-highlands-discover-splashb.jpg')      
 
       // The Right Side of the Page!
-      div(class='col-md-4 col-lg-4 col-sm-12 col-xs-12 center')   
+      div(class='col-md-4 col-lg-4 col-sm-12 col-xs-12 center left-border')   
         // Free Guide
         div(class='col-lg-12 col-xl-12 d-none d-md-block' id='ribbonAd')
           img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
@@ -212,6 +223,78 @@ block content
         // Free Land Guide Ad
         div(class='col-lg-12 col-xl-12 marginTweak')
           img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2016/07/land-guide-ad.jpg')
+
+        // LATEST FROM THE FENCE POST
+        div(class='col-lg-12 col-xl-12 marginTweak')
+          p LATEST FROM THE FENCE POST
+
+          // Successful Spring at Jasper
+          div(class='bottom-border marginTweak')
+            img(class='img img-responsive' src='http://cdn2.tnland.com/wp-content/uploads/2017/04/blog-2017-spring-view-feature-300x100.jpg')
+            p(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/blog/successful-spring-at-jasper-highlands/') A Successful Spring At Jasper Highlands
+            p The Spring season at Jasper Highlands has started with a bang! Folks from all around the country have chosen to visit … 
+              a(href='http://www.tnland.com/blog/successful-spring-at-jasper-highlands/') 
+                  span(class='orangeText') [Read More...]  
+
+          // Jasper Highlands Fire Department
+          div(class='bottom-border')
+            img(class='img img-responsive' src='http://cdn2.tnland.com/wp-content/uploads/2016/11/blog-featured-firetruck-300x100.jpg')
+            p(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/blog/jasper-highlands-fire-department-gets-best-rating-marion-county/') Jasper Highlands Fire Department Gets Best Rating In Marion County
+            p Local / Chattanooga Times Free Press One of the region's newest volunteer fire departments has achieved the best fire … 
+              a(href='http://www.tnland.com/blog/jasper-highlands-fire-department-gets-best-rating-marion-county/') 
+                  span(class='orangeText') [Read More...]  
+
+        // MOST RECENT LAND
+        div(class='col-lg-12 col-xl-12 marginTweak')
+          p MOST RECENT LAND
+
+          // Over 6 Acres With Wooded Privacy And Creek
+          div(class='bottom-border marginTweak')
+            img(class='img img-responsive inline alignleft' height='100px' width='100px' src='http://cdn2.tnland.com/wp-content/uploads/2017/06/rb228-181a-mountain-creek-120x120.jpg')
+            span(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/land/6-acres-wooded-privacy-creek/') Over 6 Acres With Wooded Privacy And Creek
+            p This Tennessee mountain property has …
+              a(href='http://www.tnland.com/land/6-acres-wooded-privacy-creek/') 
+                  span(class='orangeText') [Read More...]  
+
+          // Bluff Front...
+          div(class='bottom-border marginTweak')
+            img(class='img img-responsive inline alignleft' height='100px' width='100px' src='http://cdn3.tnland.com/wp-content/uploads/2017/03/sv107-mtn-view-100x100.jpg')
+            span(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/land/bluff-front-homesite-beautiful-views-rock-formations/') Bluff Front Homesite With Beautiful Views And Rock Formations
+            p Scenic sunsets can be enjoyed from this  …
+              a(href='http://www.tnland.com/land/bluff-front-homesite-beautiful-views-rock-formations/') 
+                  span(class='orangeText') [Read More...]          
+
+          // Level Mtn Homesite
+          div(class='bottom-border marginTweak')
+            img(class='img img-responsive inline alignleft' height='100px' width='100px' src='http://cdn.tnland.com/wp-content/uploads/2017/03/sv106-mtn-valley-view-100x100.jpg')
+            span(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/land/level-mountain-homesite-rock-formations-scenic-long-range-views/') Level Mountain Homesite With Rock Formations And Scenic Long Range Views
+            p The views from this bluff front …
+              a(href='http://www.tnland.com/land/level-mountain-homesite-rock-formations-scenic-long-range-views/') 
+                  span(class='orangeText') [Read More...]    
+
+          // Scenic Mtn Homesite
+          div(class='bottom-border marginTweak')
+            img(class='img img-responsive inline alignleft' height='100px' width='100px' src='http://cdn3.tnland.com/wp-content/uploads/2017/02/sv169-mountain-view-100x100.jpg')
+            span(class='bold')
+              i 
+                a(class='contentText' href='http://www.tnland.com/land/scenic-mountain-homesite-incredible-bluff-views/') Scenic Mountain Homesite With Incredible Bluff Views
+            p Located on the western bluff of the … 
+              a(href='http://www.tnland.com/land/scenic-mountain-homesite-incredible-bluff-views/') 
+                  span(class='orangeText') [Read More...]                
+        
+
+
+
 
 block footer
   div(id='footerMain')
