The content is completed.

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -199,7 +199,32 @@ block content
           img(class='img img-responsive shadow' src='http://cdn.tnland.com/wp-content/uploads/2014/02/jh102-creek-tennessee-property.jpg')    
           p This Jasper Highlands homesite has a bit of a slope from the road back to a really nice meandering …
             a(href='http://www.tnland.com/land/wooded-privacy-creek-and-meadows/') 
-              span(class='orangeText') [Read More...]                                  
+              span(class='orangeText') [Read More...]                 
+
+        // Smaller Article Links Row 1
+        div(class='row')
+          div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline marginTweak bottom-border marginBot')
+            a(class='contentText bold' href='http://www.tnland.com/land/large-acreage-beautiful-valley-views/')
+              img(class='img img-responsive shadow alignleft' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br3-tn-mtns-trees-120x120.jpg')    
+              p 80+ Acres Of Mountain Property With Beautiful Valley...
+
+          div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline marginTweak bottom-border marginBot')
+            a(class='contentText bold' href='http://www.tnland.com/land/large-acreage-mountain-views-creeks/')
+              img(class='img img-responsive shadow alignleft' src='http://cdn3.tnland.com/wp-content/uploads/2012/08/tract10-mountain-bluff-120x120.jpg')    
+              p 420 Acres With Mountain Views, Creeks, And Wooded Privacy
+
+        // Smaller Article Links Row 2
+        div(class='row')
+          div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline marginTweak bottom-border marginBot')
+            a(class='contentText bold' href='http://www.tnland.com/land/tellico-lake-property/')
+              img(class='img img-responsive shadow alignleft' src='http://cdn2.tnland.com/wp-content/uploads/2012/09/tp17-tellico-lake-smoky-mountains-120x120.jpg')    
+              p 2-Acre Dockable Tellico Lake…
+
+          div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline marginTweak bottom-border marginBot')
+            a(class='contentText bold' href='http://www.tnland.com/land/secluded-tn-mountain-acreage-views-wooded-privacy/')
+              img(class='img img-responsive shadow alignleft' src='http://cdn3.tnland.com/wp-content/uploads/2015/01/br4-valley-view-120x120.jpg')    
+              p Secluded Tennessee Mountain Acreage With Views And Wooded Privacy     
+
 
         // THIS IS THE FINAL PART OF THE LEFT PAGE
         // Discover Jasper Ad
