--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -115,6 +115,9 @@ img-mobile
   float: left
   text-align: left
 
+.marginBot
+  padding-bottom: 20px  
+
 #ribbonAd
   position: relative
   right: -50px
@@ -125,7 +128,7 @@ img-mobile
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, .2)
   padding-top: 25px
   padding-left: 25px
-  padding-bottom: 600px
+  padding-bottom: 50px
   margin-bottom: 50px
 
 .inline 
