Meta added to _layout

--- a/pages/templates/_layout.pug
+++ b/pages/templates/_layout.pug
@@ -7,6 +7,8 @@ html
   head
     link(rel='icon' href='/static/favicon.ico')
     meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="description" content="TN Land offers beautiful Tennessee land for sale. Find TN lots and acreage for sale with views, creeks, and waterfalls! Great country living in east Tennessee.")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js")
     script(src="https://code.jquery.com/jquery-3.3.1.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js")
