--- a/pages/index.pug
+++ b/pages/index.pug
@@ -5,7 +5,7 @@ block append page-params
     title='Tennessee Land For Sale at TN Land';
 
 block header
-  div(class='container')
+  div(class='container' id='headerContent')
     // The site title/banner at the top of the header.
     div(class='white row' id='topHeaderImage')
       div(class='col-md-8 col-sm-12')
