Form added to the orange free land ad that appears on large devices.

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -87,6 +87,29 @@ a
   .container
     max-width: 97.5%
 
+#ribbonAd
+  background: url('http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
+  overflow: hidden
+  background-repeat: no-repeat
+  background-position: left top
+  background-size: 100% 100%
+  right: -50px
+  left: 0
+  position: relative
+  z-index: 99  
+
+#shortForm
+  padding-top: 100px  
+
+#shortForm input
+  max-width: 65%  
+  margin-left: 0px
+
+#shortFormBtn
+  color: $white
+  background-color: $black
+  font-weight: bold    
+
 img
 	max-width : 100% 
 
@@ -124,11 +147,6 @@ img-mobile
 
 .marginBot
   padding-bottom: 20px  
-
-#ribbonAd
-  position: relative
-  right: -50px
-  z-index: 99  
 
 #mainContent
   background-color: $white  
