--- a/pages/index.pug
+++ b/pages/index.pug
@@ -236,7 +236,14 @@ block content
       div(class='col-md-4 col-lg-4 col-sm-12 col-xs-12 center left-border')   
         // Free Guide
         div(class='col-lg-12 col-xl-12 d-none d-md-block' id='ribbonAd')
-          img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
+          form(id='shortForm')
+            div(class='form-group')
+              input(type='text' id='firstName' name='firstName' aria-describedby="firstName" placeholder="First Name")
+            
+            div(class='form-group')
+              input(type='email' id='email' name='email' aria-describedby="email" placeholder="Email Address")
+
+            button(class='btn btn-primary' type='submit' id='shortFormBtn') ORDER
 
         // Low Taxes
         div(class='col-lg-12 col-xl-12 marginTweak')
